# tethys

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: docs.yml  publish.yml  publishtest.yml  tests.yml
docs/source/: conf.py  index.md  index.rst  quickstart.md
src/tethys/: cli.py  docs.py  example.py
src/tethys/cmd/: __init__.py  cli.py  quickstart.py
src/tethys/templates/quickstart/: CODE_OF_CONDUCT.md_t  SECURITY.md_t  pyproject.toml_t  tox.ini_t
tests/: test_docs.py  test_example.py  test_foo.py
tethys/: __init__.py  cli.py  foo.py  foobar.py
