[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tethys"
authors = [{name = "Pat Sagan", email = "pcsagan@gmail.com"}]
description = "A template for a python module with tox testing environments."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["tethys"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "tethys.__version__"}

[project.urls]
repository = "https://github.com/pcsagan/tethys"

[project.scripts]
tethys = "tethys.cli:cli"
foobar = "tethys.foo:bar"

[tool.setuptools]
py-modules = ["tethys"]