[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tethys-template"
authors = [{name = "Pat Sagan", email = "pcsagan@gmail.com"}]
description = "A python package template with tox testing environments."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["tethys-template"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flake8",
    "Framework :: Pytest",
    "Framework :: tox",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dependencies = ["click", "tox"]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "tethys-template[build]",
    "tethys-template[docs]",
    "tethys-template[lint]",
    "tethys-template[test]",
]
build = [
    "build",
    "twine",
]
docs = [
    "furo",
    "sphinx",
]
lint = [
    "bandit[toml]",
    "flake8",
    "flake8-bugbear",
    "importlib-metadata",   # required for type stubs
    "mypy",
    "pydocstyle",
    "types-click",
    "types-requests",
    "sphinx",               # required for type stubs
    "validate-pyproject",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
tethys = "tethys.cmd.cli:main"

[project.urls]
Code = "https://github.com/pcsagan/tethys"
Issues = "https://github.com/pcsagan/tethys/issues"
Actions = "https://github.com/pcsagan/tethys/actions"

[tool.setuptools.dynamic]
version = {attr = "tethys.__version__"}

[tool.pydocstringformatter]
write = true
